fixed z-index

--- a/src/app/components/tutorial/tutorial.scss
+++ b/src/app/components/tutorial/tutorial.scss
@@ -3,7 +3,7 @@
   top: 0; left: 0; right: 0; bottom: 0;
   height: 100%;
   width: 100%;
-  z-index: 1200;
+  z-index: 1099;
 }
 .card{
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
